package(default_visibility = ["//visibility:public"])

cc_library(
    name = "rusty_lib",
    srcs = [
    ],
    hdrs = [
        "include/rusty.h",
    ],
    linkstatic = True,
    deps = [],
)

cc_test(
    name = "rusty_test",
    srcs = [
        "tests/result_test.cc"
    ],
    deps = [":rusty_lib",
        "@gtest//:gtest",
        "@gtest//:gtest_main"
    ],
)
