package(default_visibility = ["//visibility:public"])

cc_library(
    name = "rusty_lib",
    srcs = [
    ],
    hdrs = [
        "include/rusty.h",
    ],
    linkstatic = True,
    deps = [],
    copts = ["--std=c++17"]
)

cc_test(
    name = "rusty_test",
    srcs = [
        "tests/result_test.cc"
    ],
    deps = [":rusty_lib",
        "@gtest//:gtest",
        "@gtest//:gtest_main"
    ],
    copts = ["--std=c++17"]
)
